--- a/GList/Base.lproj/Main.storyboard
+++ b/GList/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DeQ-ul-Sqo">
-                                        <rect key="frame" x="0.0" y="96" width="375" height="507"/>
+                                        <rect key="frame" x="0.0" y="95.5" width="375" height="446.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="nU5-0q-wVs">
@@ -44,51 +44,63 @@
                                         </connections>
                                     </tableView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yd1-D8-Qt2">
-                                        <rect key="frame" x="317" y="56" width="42" height="41"/>
+                                        <rect key="frame" x="317" y="55.5" width="42" height="41"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
                                         <state key="normal" title="Add">
-                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.75060297818791943" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="addButton:" destination="gFy-cY-xl3" eventType="touchUpInside" id="UMP-Ka-Khg"/>
                                         </connections>
                                     </button>
-                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XND-Bh-lHp">
-                                        <rect key="frame" x="0.0" y="554" width="375" height="49"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <items>
-                                            <tabBarItem title="Save List" id="I34-Bz-ikh"/>
-                                            <tabBarItem title="Go Shopping" id="iFk-dU-NC9"/>
-                                        </items>
-                                    </tabBar>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter item then add" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxR-FS-SUD">
-                                        <rect key="frame" x="16" y="61" width="272" height="30"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="16" y="60.5" width="272" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.74507130872483218" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whk-lH-jZo">
-                                        <rect key="frame" x="8" y="8" width="359" height="39"/>
+                                        <rect key="frame" x="8" y="8" width="359" height="38.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="32"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75301489093959728" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="nDs-au-qFV">
+                                        <rect key="frame" x="0.0" y="542" width="375" height="61"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iru-1j-983">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="61"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
+                                                <state key="normal" title="Save List">
+                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.74538590604026844" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-6E-h2B">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="61"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
+                                                <state key="normal" title="Go Shopping">
+                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.75406354865771807" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="leading" secondItem="XND-Bh-lHp" secondAttribute="leading" id="Bjf-uP-5HR"/>
+                                    <constraint firstItem="nDs-au-qFV" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" id="DX8-en-u6r"/>
+                                    <constraint firstItem="nDs-au-qFV" firstAttribute="top" secondItem="DeQ-ul-Sqo" secondAttribute="bottom" id="I3j-kR-stn"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" constant="8" id="Lwa-kJ-c0U"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="centerY" secondItem="Yd1-D8-Qt2" secondAttribute="centerY" id="QU8-mb-0PZ"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="Whk-lH-jZo" secondAttribute="trailing" id="fX7-LI-Eb0"/>
                                     <constraint firstAttribute="trailing" secondItem="Yd1-D8-Qt2" secondAttribute="trailing" constant="16" id="ina-kA-jNj"/>
-                                    <constraint firstAttribute="bottom" secondItem="DeQ-ul-Sqo" secondAttribute="bottom" id="j4m-Ka-zq5"/>
-                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="trailing" secondItem="XND-Bh-lHp" secondAttribute="trailing" id="llh-Wd-B4K"/>
+                                    <constraint firstAttribute="bottom" secondItem="DeQ-ul-Sqo" secondAttribute="bottom" constant="61" id="j4m-Ka-zq5"/>
                                     <constraint firstItem="DeQ-ul-Sqo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" id="ndF-MM-pnY"/>
                                     <constraint firstItem="Whk-lH-jZo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" id="pHL-Nz-vRQ"/>
-                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="bottom" secondItem="XND-Bh-lHp" secondAttribute="bottom" id="qEZ-Me-KRR"/>
                                     <constraint firstItem="Whk-lH-jZo" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="topMargin" id="qhk-0j-ewW"/>
                                     <constraint firstAttribute="trailing" secondItem="DeQ-ul-Sqo" secondAttribute="trailing" id="sBo-ob-MWx"/>
+                                    <constraint firstAttribute="trailing" secondItem="nDs-au-qFV" secondAttribute="trailing" id="u6W-A9-i88"/>
+                                    <constraint firstAttribute="bottom" secondItem="nDs-au-qFV" secondAttribute="bottom" id="uEr-Zj-bV0"/>
                                     <constraint firstItem="Yd1-D8-Qt2" firstAttribute="top" secondItem="Whk-lH-jZo" secondAttribute="bottom" constant="9" id="wYt-FG-aNu"/>
                                     <constraint firstItem="Yd1-D8-Qt2" firstAttribute="leading" secondItem="rxR-FS-SUD" secondAttribute="trailing" constant="29" id="wju-Xa-mpI"/>
                                     <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="5" id="xut-h8-78c"/>
